@@ -204,7 +204,7 @@
 				</TR>
 				<TR CLASS="LIGHT">
 					<TD WIDTH="50%" ALIGN="RIGHT" CLASS="FLEFT">
-						<B><A href="?m=rtsearch&state=0&o=lastmodified,desc">{t}New:{/t}</A></B>
+						<B><A href="?m=rtqueueview&s=0&o=lastmodified,desc">{t}New:{/t}</A></B>
 					</TD>
 					<TD WIDTH="50%" CLASS="FRIGHT">
 						{$rtstats.new|default:"0"}
@@ -212,7 +212,7 @@
 				</TR>
 				<TR CLASS="LIGHT">
 					<TD WIDTH="50%" ALIGN="RIGHT" CLASS="FLEFT">
-						<B><A href="?m=rtsearch&state=1&o=lastmodified,desc">{t}Opened:{/t}</A></B>
+						<B><A href="?m=rtqueueview&s=1&o=lastmodified,desc">{t}Opened:{/t}</A></B>
 					</TD>
 					<TD WIDTH="50%" CLASS="FRIGHT">
 						{$rtstats.opened|default:"0"}
@@ -220,7 +220,7 @@
 				</TR>
 				<TR CLASS="LIGHT">
 					<TD WIDTH="50%" ALIGN="RIGHT" CLASS="FLEFT">
-						<B><A href="?m=rtsearch&state=3&o=lastmodified,desc">{t}Dead:{/t}</A></B>
+						<B><A href="?m=rtqueueview&s=3&o=lastmodified,desc">{t}Dead:{/t}</A></B>
 					</TD>
 					<TD WIDTH="50%" CLASS="FRIGHT">
 						{$rtstats.dead|default:"0"}
@@ -228,7 +228,7 @@
 				</TR>
 				<TR CLASS="LIGHT">
 					<TD WIDTH="50%" ALIGN="RIGHT" CLASS="FLEFT">
-						<B><A href="?m=rtsearch&state=2&o=lastmodified,desc">{t}Resolved:{/t}</A></B>
+						<B><A href="?m=rtqueueview&s=2&o=lastmodified,desc">{t}Resolved:{/t}</A></B>
 					</TD>
 					<TD WIDTH="50%" CLASS="FRIGHT">
 						{$rtstats.resolved|default:"0"}
